test/syc/bad/signedunsigned.c
/*
 * Both signed and unsigned specifier
 */

signed unsigned a;
